--- a/Client/Client/Shared/Containers/ReserveEmployee.razor
+++ b/Client/Client/Shared/Containers/ReserveEmployee.razor
@@ -10,11 +10,22 @@
 </style>
 
 <div class="rp-container">
-    <ReserveCard PictureUrl="https://daintydemo.simplybook.it/uploads/daintydemo/image_files/preview/daeb16509f61d78cbe6c988b4f21b468.jpg" Title="Test" Description="Description" OnClick="@(() => OnReserve("1"))"/>
+    @foreach (var Employee in Employees)
+    {
+        <ReserveCard 
+            PictureUrl="https://daintydemo.simplybook.it/uploads/daintydemo/image_files/preview/daeb16509f61d78cbe6c988b4f21b468.jpg" 
+            Title="@(Employee.FirstName + " " + Employee.LastName)" 
+            Description="@Employee.Phone"
+            OnClick="@(() => OnReserve(Employee.Id))"
+            />   
+    }
 </div>
 
 
 @code {
+    [Parameter]
+    public List<Employee> Employees { get; set; }
+    
     [Parameter]
     public Action<string> OnReserve { get; set; }
 }
