--- a/Client/Client/Shared/Components/BusinessCard.razor
+++ b/Client/Client/Shared/Components/BusinessCard.razor
@@ -28,8 +28,8 @@
         <h1>@Name</h1>
     </CardHeader>
     <CardContent>
-        <p>@Services @(@Services == 1 ? "service" : "services")</p>
-        <p>@Employees @(@Services == 1 ? "employee" : "employees")</p>
+        <p>@Services @(Services == 1 ? "service" : "services")</p>
+        <p>@Employees @(Employees == 1 ? "employee" : "employees")</p>
     </CardContent>
     <CardFooter>
         <CardFooterContent>
