--- a/Client/Client/Pages/AddBusiness.razor
+++ b/Client/Client/Pages/AddBusiness.razor
@@ -174,7 +174,7 @@ display: flex;
 
         if (statusCode == HttpStatusCode.Created || statusCode == HttpStatusCode.OK)
         {
-            NavigationManager.NavigateTo("/BookService");
+            NavigationManager.NavigateTo("/OwnedBusinesses");
             StateHasChanged();
         }
     }
