--- a/Client/Client/Pages/EditBusiness.razor
+++ b/Client/Client/Pages/EditBusiness.razor
@@ -14,11 +14,15 @@
     <EditForm Model="@newBusiness" OnValidSubmit="@EditThisBusiness" class="content-wrapper">
         <ObjectGraphDataAnnotationsValidator/>
 
+        <div style="float: right">
+            <SfButton CssClass="e-danger" type="button">Delete Business</SfButton>
+        </div>
         <div>
             <h2 class="font-weight-bold">Edit Business</h2>
             <p>Please enter details below to edit the business</p>
             <hr/>
         </div>
+
 
         <div id="form-div" class="card p-4">
             <div class="row">
@@ -62,10 +66,8 @@
                 <SfButton IconCss="e-btn-sb-icons e-add-icon" CssClass="e-small e-round" IsPrimary="true" type="button" @onclick="@(() => newBusiness.Locations.Add(new Location()))"></SfButton>
             </div>
 
-            <div class="col-md-12 d-flex justify-content-between">
+            <div class="col-md-12">
                 <SfButton IsPrimary="true" type="submit">Edit Business</SfButton>
-                <SfButton CssClass="e-danger" type="button" >Delete Business</SfButton>
-                @* @onclick="@(() => BusinessService.)" *@
             </div>
         </div>
     </EditForm>
