--- a/Client/Client/Pages/Index.razor
+++ b/Client/Client/Pages/Index.razor
@@ -1,4 +1,5 @@
 ﻿@page "/"
+@inject NavigationManager NavigationManager
 @using Client.Shared.Components
 
 @using Syncfusion.Blazor.Layouts
@@ -8,10 +9,7 @@
 
 <LogInComponent/>
 
-@code
-{
-    protected override Task OnInitializedAsync()
-    {
-        return base.OnInitializedAsync();
-    }
-}
+<div class="d-flex justify-content-center align-items-center vh-100">
+    <SfButton CssClass="e-btn e-outline e-primary" type="button" @onclick="@(() => NavigationManager.NavigateTo("/Services"))">SERVICES</SfButton>
+</div>
+
