--- a/Client/Client/Pages/EditBusiness.razor
+++ b/Client/Client/Pages/EditBusiness.razor
@@ -27,7 +27,7 @@
         <div id="form-div" class="card p-4">
             <div class="row">
                 <div class="col-xs-8 col-sm-8 col-lg-8 col-md-8">
-                    <SfTextBox @bind-Value="newBusiness.Name" Placeholder="First Name" CssClass="e-bigger" FloatLabelType="@FloatLabelType.Auto"></SfTextBox>
+                    <SfTextBox @bind-Value="newBusiness.Name" Placeholder="Name" CssClass="e-bigger" FloatLabelType="@FloatLabelType.Auto"></SfTextBox>
                     <ValidationMessage For="@(() => newBusiness.Name)"/>
                 </div>
                 <div class="col-xs-4 col-sm-4 col-lg-4 col-md-4">
