--- a/Client/Client/Pages/AddBusiness.razor
+++ b/Client/Client/Pages/AddBusiness.razor
@@ -25,7 +25,7 @@
 
             <div class="row">
                 <div class="col-xs-6 col-sm-6 col-lg-6 col-md-6">
-                    <SfTextBox @bind-Value="_business.Name" Placeholder="First Name" CssClass="e-bigger" FloatLabelType="@FloatLabelType.Auto"></SfTextBox>
+                    <SfTextBox @bind-Value="_business.Name" Placeholder="Name" CssClass="e-bigger" FloatLabelType="@FloatLabelType.Auto"></SfTextBox>
                     <ValidationMessage For="@(() => _business.Name)"/>
                 </div>
                 <div class="col-xs-6 col-sm-6 col-lg-6 col-md-6">
