--- a/Client/Client/Shared/NavMenu.razor
+++ b/Client/Client/Shared/NavMenu.razor
@@ -15,6 +15,11 @@
             </li>
         </AuthorizeView>
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="MyAppointments">
+                <span class="oi oi-folder" aria-hidden="true"></span> My Appointments
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="services">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Services
             </NavLink>
