--- a/Client/Client/Pages/MyAppointments.razor
+++ b/Client/Client/Pages/MyAppointments.razor
@@ -2,6 +2,7 @@
 @using Client.Data
 @using Client.Models
 @using System.Security.Claims
+@using Syncfusion.Blazor.Buttons
 @inject IAppointmentService AppointmentService
 @inject AuthenticationStateProvider CustomAuthenticationStateProvider
 
@@ -27,13 +28,15 @@
 
 @foreach (Appointment appointment in _appointments)
 {
-    <div>
+    <div class="my-appointments">
         <div>
             <h3>@appointment.serviceName (@appointment.scheduledTime)</h3>
             <h4>@appointment.selectedLocation.StreetName - @appointment.selectedLocation.StreetNumber</h4>
         </div>
-        
-        <button>Delete</button>
+
+        <SfButton @onclick=@(() => deleteAppointment(appointment.id))>
+            <i class="oi oi-trash" style="color: red"></i>
+        </SfButton>
     </div>
 }
 
@@ -49,6 +52,20 @@
             Claim userClaim = user.FindFirst(claim => claim.Type.Equals("Id"));
 
             _appointments = await AppointmentService.getAppointmentsByUserId(userClaim.Value);
+        }
+        catch
+        {
+        }
+    }
+
+    public async void deleteAppointment(string appointmentId)
+    {
+        try
+        {
+            await AppointmentService.deleteAppointment(appointmentId);
+            var updatedAppointments = _appointments.FindAll(x => x.id != appointmentId);
+            _appointments = updatedAppointments;
+            StateHasChanged();
         }
         catch
         {
